# ArtStationViewPredictor

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bumpversion.yml  ci.yml  ci_v2.yml
src/Cleanup/Scraper/: Artstation_community.csv  Artwork_dataclass.py  Artwork_variables.csv  Artwork_variables_temp.csv  Website.py  artwork.csv  artwork_variables.csv  dataclass_util.py  main.py  scraper_variables.py  util.py
src/Project/: main.py  util.py
