[tool.poetry]
name = "your-project"
version = "0.3.0"
description = "Predicting the number of likes on a post"
authors = ["Phillip Todorov <ph.todorov@yahoo.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
